--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
 		"js/NoSleep.min_dcbd0e59.js"
 	],
 	"game": [
-		"js/default.thm_309d9470.js",
-		"js/main.min_29c8dbc9.js"
+		"js/default.thm_b4ea8477.js",
+		"js/main.min_bc73b286.js"
 	]
 }
